Massive improvements to the autocropping system